# Voicebot-Android-Clean-Architecture

./: .gitignore  AGENTS.md  README.md  deps.txt  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gemma_database.txt  misa_product.json  qa_database.txt
app/src/main/assets/vits-piper-vi-ngochuyen/: tokens.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: ai_core.cpp
app/src/main/cpp/src/cpu/: cpu_helper.h
app/src/main/cpp/src/state/: global_state.cpp  model_state.h
app/src/main/cpp/src/tool_calling/: tool_call_state.h
app/src/main/java/com/k2fsa/sherpa/onnx/: SherpaOnnxTts.kt
app/src/main/java/com/voicebot/: ARCHITECTURE.md
app/src/main/java/com/voicebot/data/factory/: EngineFactory.kt
app/src/main/java/com/voicebot/data/llm/executorch/: ExecuTorchLlmEngine.kt
app/src/main/java/com/voicebot/data/llm/gemini/: GeminiLlmEngine.kt
app/src/main/java/com/voicebot/data/llm/litert/: LiteRtLlmEngine.kt
app/src/main/java/com/voicebot/data/llm/native/: NativeLlmEngine.kt
app/src/main/java/com/voicebot/data/llm/ragonly/: RagOnlyLlmEngine.kt
app/src/main/java/com/voicebot/data/normalizer/: PiperTextPreProcessor.kt  TextNormalizers.kt
app/src/main/java/com/voicebot/data/rag/: EmbedRagEngine.kt
app/src/main/java/com/voicebot/data/rag/embedding/: EmbedRagEngine.kt
app/src/main/java/com/voicebot/data/rag/fasttext/: FastTextRagEngine.kt
app/src/main/java/com/voicebot/data/stt/android/: AndroidSttEngine.kt
app/src/main/java/com/voicebot/data/tts/android/: AndroidTtsEngine.kt
app/src/main/java/com/voicebot/domain/model/: BotConfig.kt  ChatMessage.kt  PerfMetrics.kt
app/src/main/java/com/voicebot/domain/port/: LlmEngine.kt  RagEngine.kt  SttEngine.kt  TextNormalizer.kt  TtsEngine.kt
app/src/main/java/com/voicebot/domain/usecase/: BargeInDetector.kt  VoiceQueryUseCase.kt
app/src/main/java/com/voicebot/presentation/: AvatarController.kt  ChatAdapter.kt  MainActivity.kt  SecondActivity.kt  SetupActivity.kt  VoiceBotOrchestrator.kt
app/src/main/java/com/voicebot/ui/: MaxHeightScrollView.kt
app/src/main/res/drawable/: bg_chat_bot.xml  bg_chat_user.xml  bg_metrics.xml
app/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_setup.xml  item_chat.xml
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
